appId: com.duckduckgo.mobile.ios
tags:
    - iphone
    - adClick

---

# Set up 
- runFlow: 
    file: ../shared/setup.yaml
    
# Load Site
- assertVisible:
    id: "searchEntry"
- tapOn: 
    id: "searchEntry"
- inputText: "https://www.search-company.site/#ad-id-2"
- pressKey: Enter

# Test Ad2
- assertVisible:
    text: "[Ad 2] Shopping Tab Ad (heuristic)"
- tapOn:
    text: "[Ad 2] Shopping Tab Ad (heuristic)"
- assertVisible:
    text: "Publisher site"
- tapOn:
    id: "privacy-icon-shield.button"
- assertVisible:
    text: "View Tracker Companies"
- tapOn:
    text: "View Tracker Companies"
- assertVisible:
    text: "The following third-party domains’ requests were blocked from loading because they were identified as tracking requests. If a company's requests are loaded, it can allow them to profile you."
- assertVisible:
    text: "About our Web Tracking Protections"
- assertVisible:
    text: ".*Ad Company"
- assertVisible:
    text: "convert.ad-company.site"
- assertVisible:
    text: "ad-company.site"
- tapOn: "Back"
- assertVisible:
    text: "View Non-Tracker Companies"
- tapOn:
    text: "View Non-Tracker Companies"
- assertVisible:
    text: "We did not identify any requests from third-party domains."
- assertVisible:
    text: "About our Web Tracking Protections"

