appId: com.duckduckgo.mobile.ios
tags:
    - duckplayer.native

---


# Load constants
- runFlow:
    file: shared/constants.yaml

# Set up 
- runFlow: 
    file: ../shared/setup.yaml

# Navigate to a video
# Load Site
- runFlow: 
    file: shared/load_serp_url.yaml

- scroll

# Open Specific Video
- assertVisible: ${output.videoTitle}
- tapOn: ${output.videoTitle}

# Validate Duck Player is Visible
- runFlow: 
    file: shared/duckplayer_is_visible.yaml

# Validate this is SERP View
- assertVisible:
    id: ${output.watchOnYoutubeLabel}

# Validate Duck Player Closes
- runFlow: 
    file: shared/close_player.yaml