appId: com.duckduckgo.mobile.ios
tags:
    - iphone
    - duckplayer_native

---

# Load constants
- runFlow:
    file: shared/constants.yaml

# Set up 
- runFlow: 
    file: ../shared/setup.yaml

# Open Settings
- runFlow: 
    file: shared/open_settings.yaml

# Turn SERP off
- tapOn:
    text: ${output.serpToggleOn}
    index: 0

# Close Settings
- runFlow: 
    file: shared/close_settings.yaml

# Navigate to a video
# Load Site
- runFlow: 
    file: shared/load_serp_url.yaml

  # Assert Youtube Search Page opens and open the video
- assertVisible: ${output.videoTitle}
- tapOn: ${output.videoTitle}

# Validate YouTube opens
- assertVisible: ${output.youtubeMobileDomain}

# Assert Duck Player Welcome Pill is present
- assertVisible:
    id: duckPlayerWelcomePill