appId: com.duckduckgo.mobile.ios
tags:
    - iphone
    - duckplayer_native

---

# Load constants
- runFlow:
    file: shared/constants.yaml

# Set up 
- runFlow: 
    file: ../shared/setup.yaml

# Open Settings
- runFlow: 
    file: shared/open_settings.yaml

# Turn DuckPlayer to Auto
- tapOn:
    id: chevron.up.chevron.down
- tapOn: ${output.openAutomaticallyLabel}

# Close Settings
- runFlow: 
    file: shared/close_settings.yaml

# Navigate to a video
# Load Site
- runFlow: 
    file: shared/load_youtube_url.yaml

# Tap on the video
- assertVisible: ${output.videoTitle}
- tapOn: ${output.videoTitle}

# Assert Duck Player is Visible
- runFlow: 
    file: shared/duckplayer_is_visible.yaml

- tapOn: ${output.duckPlayerSettingsId}

- assertVisible: "SettingsDuckPlayerHero"