appId: com.duckduckgo.mobile.ios
---

# Load constants
- runFlow:
    file: constants.yaml

- assertVisible:
    id: ${output.searchEntryId}
- tapOn: 
    id: ${output.searchEntryId}
- inputText: ${output.videoSearchUrl}
- pressKey: Enter

- waitForAnimationToEnd