appId: com.duckduckgo.mobile.ios
tags:
    - iphone
    - privacy

---

# Set up 
- runFlow: 
    file: ../shared/setup.yaml

# Load Site
- assertVisible:
    id: "searchEntry"
- tapOn: 
    id: "searchEntry"
- inputText: "https://www.search-company.site/#ad-id-5"
- pressKey: Enter

# Test
- assertVisible: "[Ad 5] SERP Ad (heuristic)"
- longPressOn: "[Ad 5] SERP Ad (heuristic)"
- assertVisible:
    text: "Open in New Tab"
- tapOn:
    text: "Open in New Tab"
- assertVisible:
    text: "Publisher site"
- tapOn: 
    id: "privacy-icon-shield.button" 
- assertVisible:
    text: "View Tracker Companies"
- tapOn:
    text: "View Tracker Companies"
- assertVisible:
    text: "The following third-party domains’ requests were blocked from loading because they were identified as tracking requests. If a company's requests are loaded, it can allow them to profile you."
- assertVisible:
    text: "About our Web Tracking Protections"
- assertVisible:
    text: ".*Ad Company"
- assertVisible:
    text: "ad-company.site"
- tapOn: "Back"
- assertVisible:
    text: "View Non-Tracker Companies"
- tapOn:
    text: "View Non-Tracker Companies"
- assertVisible:
    text: "The following third-party domains’ requests were loaded. If a company's requests are loaded, it can allow them to profile you, though our other web tracking protections still apply."
- assertVisible:
    text: "About our Web Tracking Protections"
- assertVisible:
    text: "The following domain’s requests were loaded because a publisher-company.site ad on DuckDuckGo was recently clicked. These requests help evaluate ad effectiveness. All ads on DuckDuckGo are non-profiling."
- assertVisible:
    text: "How our search ads impact our protections"
- assertVisible:
    text: ".*Ad Company"
- assertVisible:
    text: "convert.ad-company.site"
- tapOn: "Back"
- tapOn: "Done"
- assertVisible:
    text: "Buy now"
- tapOn:
    text: "Buy now"
- tapOn: 
    text: "High five!"
    optional: true
- assertVisible:
    text: "Checkout"
- tapOn: 
    id: "privacy-icon-shield.button"
- assertVisible:
    text: "View Tracker Companies"
- tapOn:
    text: "View Tracker Companies"
- assertVisible:
    text: "The following third-party domains’ requests were blocked from loading because they were identified as tracking requests. If a company's requests are loaded, it can allow them to profile you."
- assertVisible:
    text: "About our Web Tracking Protections"
- assertVisible:
    text: ".*Ad Company"
- assertVisible:
    text: "ad-company.site"
- tapOn: "Back"
- assertVisible:
    text: "View Non-Tracker Companies"
- tapOn:
    text: "View Non-Tracker Companies"
- assertVisible:
    text: "The following third-party domains’ requests were loaded. If a company's requests are loaded, it can allow them to profile you, though our other web tracking protections still apply."
- assertVisible:
    text: "About our Web Tracking Protections"
- assertVisible:
    text: "The following domain’s requests were loaded because a publisher-company.site ad on DuckDuckGo was recently clicked. These requests help evaluate ad effectiveness. All ads on DuckDuckGo are non-profiling."
- assertVisible:
    text: "How our search ads impact our protections"
- assertVisible:
    text: ".*Ad Company"
- assertVisible:
    text: "convert.ad-company.site"
- tapOn: "Back"
- tapOn: "Done"
- assertVisible:
    text: "Pay"
- tapOn:
    text: "Pay"
- assertVisible:
    text: ".*Order complete.*"
- tapOn: 
    id: "privacy-icon-shield.button"
- assertVisible:
    text: "View Tracker Companies"
- tapOn:
    text: "View Tracker Companies"
- assertVisible:
    text: "The following third-party domains’ requests were blocked from loading because they were identified as tracking requests. If a company's requests are loaded, it can allow them to profile you."
- assertVisible:
    text: "About our Web Tracking Protections"
- assertVisible:
    text: ".*Ad Company"
- assertVisible:
    text: "ad-company.site"
- tapOn: "Back"
- assertVisible:
    text: "View Non-Tracker Companies"
- tapOn:
    text: "View Non-Tracker Companies"
- assertVisible:
    text: "The following third-party domains’ requests were loaded. If a company's requests are loaded, it can allow them to profile you, though our other web tracking protections still apply."
- assertVisible:
    text: "About our Web Tracking Protections"
- assertVisible:
    text: "The following domain’s requests were loaded because a publisher-company.site ad on DuckDuckGo was recently clicked. These requests help evaluate ad effectiveness. All ads on DuckDuckGo are non-profiling."
- assertVisible:
    text: "How our search ads impact our protections"
- assertVisible:
    text: ".*Ad Company"
- assertVisible:
    text: "convert.ad-company.site"
