appId: com.duckduckgo.mobile.ios
tags:
    - iphone
    - privacy

---

# Set up 
- runFlow: 
    file: ../shared/setup.yaml

- assertVisible:
    id: "searchEntry"

# Test 1 - Leave the dangerous site
- tapOn: 
    id: "searchEntry"
- inputText: "https://expired.badssl.com"
- pressKey: Enter
- assertVisible: "Warning: This site may be insecure"
- assertVisible:
    id: "Globe-24"
- tapOn: "Leave This Site"
- assertNotVisible: "Warning: This site may be insecure"

# Test 2 - Visit the dangerous site
- tapOn: 
    id: "searchEntry"
- inputText: "https://expired.badssl.com"
- pressKey: Enter
- assertVisible:
    id: "Globe-24"
- tapOn: "Advanced"
- scroll
- tapOn: "Accept Risk and Visit Site"
- assertVisible: 
    id: "privacy-icon-shield.button"
- assertVisible: "expired.badssl.com"


