appId: com.duckduckgo.mobile.ios
tags:
    - iphone
    - securityTest
---

# Set up 
- runFlow: 
    file: ../shared/setup.yaml

# Load Site
- assertVisible:
    id: "searchEntry"
- tapOn: 
    id: "searchEntry"
- inputText: "https://privacy-test-pages.site/security/address-bar-spoofing/spoof-basicauth-2028.html"
- pressKey: Enter

# Test
- tapOn: "run"
- assertVisible: "Example Domain"
- copyTextFrom:
    id: "searchEntry"
- assertTrue: ${maestro.copiedText.indexOf("google.com") != 0}
- tapOn:
    id: "searchEntry"
# Test 2 - using \u2029 character
- inputText: "https://privacy-test-pages.site/security/address-bar-spoofing/spoof-basicauth-2029.html"
- pressKey: Enter
- tapOn: "run"
- assertVisible: "Example Domain"
- copyTextFrom:
    id: "searchEntry"
- assertTrue: ${maestro.copiedText.indexOf("google.com") != 0}
- tapOn:
    id: "searchEntry"
# Test 3 - using repeated " " space character
- inputText: "https://privacy-test-pages.site/security/address-bar-spoofing/spoof-basicauth-whitespace.html"
- pressKey: Enter
- tapOn: "run"
- assertVisible: "Example Domain"
- copyTextFrom:
    id: "searchEntry"
- assertTrue: ${maestro.copiedText.indexOf("google.com") != 0}
