appId: com.duckduckgo.mobile.ios
tags:
    - iphone
    - securityTest
---

# Set up 
- runFlow: 
    file: ../shared/setup.yaml

# Load Site
- assertVisible:
    id: "searchEntry"
- tapOn: 
    id: "searchEntry"
- inputText: "https://privacy-test-pages.site/security/address-bar-spoofing/spoof-open-b64-html.html"
- pressKey: Enter

# Test
- tapOn: "Start"
# This test is expected to do nothing: loading base64 encoded HTML content in a new tab is blocked.
- copyTextFrom:
    id: "searchEntry"
- assertTrue: ${maestro.copiedText == "privacy-test-pages.site"}
