appId: com.duckduckgo.mobile.ios
tags:
    - iphone
    - securityTest
---

# Set up 
- runFlow: 
    file: ../shared/setup.yaml

# Load Site
- assertVisible:
    id: "searchEntry"
- tapOn: 
    id: "searchEntry"
- inputText: "https://privacy-test-pages.site/security/address-bar-spoofing/spoof-js-page-rewrite.html"
- pressKey: Enter

# Test
- tapOn: "Start"
# Now check the address bar hasn't been updated too early resulting in spoofed content
- copyTextFrom:
    id: "searchEntry"
- assertTrue: ${maestro.copiedText == "privacy-test-pages.site"}
