appId: com.duckduckgo.mobile.ios
---

# Workaround - for some reason Tab Switcher button is not found by maestro at this point.
- runFlow: ../shared/pull_to_refresh.yaml

- assertVisible: "Tab Switcher"
- tapOn: "Tab Switcher"
- assertVisible: ${TITLE}
- tapOn: "Done"